--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "5.9.0",
     "flatted": "^2.0.0",
+    "ngx-image-cropper": "1.3.8",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
